ThriftX-Backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thriftx-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: thriftx-backend
  template:
    metadata:
      labels:
        app: thriftx-backend
    spec:
      containers:
        - name: thriftx-backend
          image: chad0/thriftx-backend:new
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: thriftx-backend-service
  labels:
    app: thriftx-backend
spec:
  type: LoadBalancer
  selector:
    app: thriftx-backend
  ports:
    - port: 80
      targetPort: 8082
