ThriftX-Backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thriftx-backend-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: thriftx.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: thriftx-backend-service
                port:
                  number: 80
